# rust-blog-using-rocket

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  post_handler.rs  user_handler.rs
api/src/create_post_handler/: mod.rs
api/src/delete_post_handler/: mod.rs
api/src/list_post_handler/: mod.rs
api/src/list_posts_handler/: mod.rs
api/src/publish_post_handler/: mod.rs
application/: Cargo.toml
application/src/: auth.rs  lib.rs
application/src/create_post/: mod.rs
application/src/list_post/: mod.rs
application/src/list_posts/: mod.rs
application/src/post/: create.rs  delete.rs  mod.rs  publish.rs  read.rs
application/src/user/: create.rs  delete.rs  login.rs  mod.rs  read.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2022-11-18-090125_create_posts/: up.sql
infrastructure/migrations/2022-11-21-134159_genre_and_date/: up.sql
infrastructure/migrations/2022-11-21-134739_genre_and_date2/: down.sql  up.sql
infrastructure/migrations/2022-11-23-055219_create_users/: down.sql  up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  request_models.rs  response_models.rs
web_ui/: package-lock.json  package.json  tailwind.config.js
web_ui/src/: App.css  App.tsx
